<resources>
    <string name="app_name">Pausas Activas y Bienestar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DESARROLLO EMPRESARIAL INGENIERIL</string>
    <string name="nav_header_correo">desarrolloempresarialing@gmail.com</string>
    <string name="nav_header_subtitle">Inf. 3165319326</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="generales">Reproducir</string>
    <string name="app_1">Reproducir</string>
    <string name="menu_home">Mejora tu salud</string>
    <string name="menu_gallery">Pausas activas</string>
    <string name="menu_slideshow">Cuida tus ojos</string>
    <string name="app_bienvenida">HOLA!!! BIENVENIDO</string>
    <string name="app_haz">Si quieres recibir contenido exclusivo, regístrate y haz parte de nuestro mundo</string>
    <string name="app_nombre">Nombre completo</string>
    <string name="app_correo">Correo electrónico (opcional)</string>
    <string name="app_celular">Número de celular (opcional)</string>
    <string name="app_empresa">Nombre de la Empresa (opcional)</string>
    <string name="app_registrar">REGISTRARSE</string>
    <string name="app_ahora">EMPIEZA TU AUTOCUIDADO AHORA!!!</string>
    <string name="app_2">REGÍSTRATE AHORA!!</string>
    <string name="app_3">¿QUIERES MEJORAR TU SALUD EN 6 SIMPLES PASOS?</string>
    <string name="A1">1. Mejora tus posturas en la oficina y en tu lugar de trabajo</string>
    <string name="A2">2. Realiza pausas activas y disminuye el dolor muscular</string>
    <string name="A3">3. Disminuye el cansancio de tus ojos</string>
    <string name="A4">4. Haz tu propio estudio de iluminación</string>
    <string name="A5">5. Realiza descansos personalizados en tu jornada laboral</string>
    <string name="A6">6.Implementa hábitos y estilos de vida saludables de la manera más sencilla y efectiva</string>
    <string name="A7">SÍNTOMAS DEL SÍNDROME DEL TÚNEL DEL CARPO</string>
    <string name="app_botonpausasactivas2">DISMINUYE EL DOLOR MUSCULAR EN SOLO 5 PASOS</string>
    <string name="app_paso126">SI NECESITAS DISMINUIR EL DOLOR DE MANERA INMEDIATA, SELECCIONA LA ZONA AFECTA Y REALIZA LOS EJERCICIOS</string>
    <string name="app_paso127">CABEZA Y CUELLO</string>
    <string name="app_paso128">BRAZOS </string>
    <string name="app_paso129">MANOS</string>
    <string name="app_paso130">ESPALDA</string>
    <string name="app_paso131">PIERNAS</string>
    <string name="app_paso111">PASO 1. REALIZA EJERCICIOS DE CALENTAMIENTO</string>
    <string name="app_paso112">Ejercicios de calentamiento puestos dinámicos</string>
    <string name="app_paso113">Ejercicios de calentamiento en la oficina VDT</string>
    <string name="app_paso114">PASO 2. REALIZA EJERCICIOS DE ESTIRAMIENTO LUEGO DE DOS HORAS DE TRABAJO</string>
    <string name="app_paso115">Ejercicios de estiramiento puestos dinámicos (2h)</string>
    <string name="app_paso116">Ejercicios de estiramiento en la oficina VDT (2h)</string>
    <string name="app_paso117">PASO 3. REALIZA EJERCICIOS DE ESTIRAMIENTO EN LA MITAD DE LA JORNADA LABORAL</string>
    <string name="app_paso118">Ejercicios de estiramiento puestos dinámicos (4h)</string>
    <string name="app_paso119">Ejercicios de estiramiento en la oficina VDT (4h)</string>
    <string name="app_paso120">PASO 4. REALIZA EJERCICIOS DE ESTIRAMIENTO LUEGO DE 6 HORAS LABORADAS</string>
    <string name="app_paso121">Ejercicios de estiramiento puestos dinámicos (6h)</string>
    <string name="app_paso122">Ejercicios de estiramiento en la oficina VDT (6h)</string>
    <string name="app_paso123">PASO 5. REALIZA EJERCICIOS DE ESTIRAMIENTO AL FINALIZAR LA JORNADA LABORAL</string>
    <string name="app_paso124">Ejercicios de estiramiento puestos dinámicos (8h)</string>
    <string name="app_paso125">Ejercicios de estiramiento en la oficina VDT (8h)</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_121">EJERCICIOS PARA DISMINUIR EL DOLOR DE CABEZA, CUELLO y HOMBROS</string>
    <string name="app_122">EJERCICIO 1. Levantemos los hombros y rótenoslos hacia atrás hacia atrás, haciendo 15 repeticiones</string>
    <string name="app_pasojos">CONSEJOS PARA CUIDAR TUS OJOS FUERA DE LA OFICINA</string>
    <string name="app_141">1. En la noche activa la iluminación de tu celular en modo nocturno</string>
    <string name="app_142">2. Ubica el televisor de tal manera que las luminarias no se reflejen en tus ojos</string>
    <string name="app_143">3. Protege tus ojos con gafas solares </string>
    <string name="app_144">4. No leas o estudies cuando estés demasiado cansado o a punto de dormirte</string>
    <string name="app_145">5. No leas o estudies al levantarte por la mañana, espera al menos una hora a que el ojo se adapte.</string>
    <string name="app_146">6. No veas la televisión a una distancia inferior a 2 metros y asegúrate de mantener una buena postura. Debes tener iluminada la habitación, nunca a oscuras.</string>
    <string name="app_147">7. No te acerques en exceso al leer ni escribir, ni ladees o gires tu cabeza o espalda.</string>
    <string name="app_148">8. Cuando vayas en un vehículo evita la lectura, uso de celular u otras actividades de cerca.</string>
    <string name="app_149">9. Ajusta el tamaño de la letra de la pantalla del computador o celular a uno que te resulte fácil de leer.</string>
    <string name="app_1490">10. Intenta descansar entre 2 y 3 minutos cada 15 ó 20 minutos. Aprovecha para estirar los brazos, las piernas y la espalda.</string>
    <string name="app_1491">11. Sométete a revisiones de la vista por lo menos una vez al año. Sobre todo a partir de los 40 años y si hay antecedentes de patologías relacionadas con los ojos.</string>
    <string name="app_pag60">DESAYUNOS SALUDABLES</string>
    <string name="app61">Una tortilla de jamón york es una de las opciones más sanas para desayunar ya que es fuente de proteínas de alta calidad. Toma también una pieza de fruta y tendrás el desayuno perfecto.</string>
    <string name="app62">Un desayuno sencillo que se puede preparar en poco menos de dos minutos: vuelca un yogur natural sin azúcar en un bol -o un yogur griego, que contiene más proteínas- y añádele nueces, anacardos o almendras. ¡Delicioso!</string>
    <string name="app63">Si lo prefieres, también puedes preparar un bol de yogur con fruta -la naranja, el plátano, el kiwi y las frutas del bosque combinan especialmente bien con este lácteo- y añadirle un puñadito de semillas de chía, que aportan grasas de calidad.</string>
    <string name="app_pag64">Cuando los compres, fíjate en el etiquetado y asegúrate de que sean orgánicos, ecológicos o integrales. Puedes tomarlos con leche semidesnatada o leches vegetales. ¡Un desayuno saciante y sin azúcares!</string>
    <string name="a65">Un sándwich integral que puedes preparar en dos minutos y que resulta de lo más equilibrado: la combinación de grasas ‘buenas’, proteínas y carbohidratos de absorción lenta te saciará durante toda la mañana.</string>
    <string name="a601">Las tostadas son una opción recurrente de nuestros desayunos. Dale una vuelta y prepara unas tostadas de pan integral con queso de untar y fresas. Acaba con un puñadito de semillas de chía. Una elaboración completa con vitaminas, proteínas, hidratos de carbono y fibra.</string>
    <string name="a602">yogur y acompañándolo con un plátano cortado en láminas y un puñado de nueces picadas. Para endulzarlo apuesta por la miel.</string>
    <string name="a603">aplasta dos plátanos con un tenedor (que sustituirán al azúcar) y añádelo al huevo batido, un par de cucharadas de cacao puro en polvo y un poco de harina (si ves que la masa está muy líquida). Usa una sartén antideslizante para que tus tortitas salgan perfectas. </string>
    <string name="a604">Mezcla yogur griego con muesli, pica una pieza de melocotón y mételo unos segundos al microondas para que se ablande y quede más meloso. Coloca la mezcla en un vasito en capas: primero la fruta y después el yogur. Para un toque extra añádele un poco de miel.</string>
    <string name="a605">El porridge es una mezcla con la que podrás experimentar tanto como quieras. En esta ocasión prepara la mezcla de avena con yogur y leche. A la mañana siguiente añade moras, semillas de chía y medio plátano picado. ¡Toda una delicia!</string>
    <string name="a606">Los huevos a la plancha son un desayuno fácil y muy recurrido. Dale una vuelta colocándolos en una tostada. Incorpora unas rodajas de tomates y pepino, que le darán el frescor que necesita. Para un extra de fibra añade semillas de ajonjolí.</string>
    <string name="a607">Para preparar esta receta, es un pequeño recipiente mezcla yogur natural con un poco de avena, después agrega trozos de mango (o tu fruta preferida)</string>
    <string name="a608">Si quieres prepararte un sándwich, mejor que sea con pan integral o de centeno. Te proponemos otro muy saludable elaborado con lonchas finas de pavo, lechuga, tomate y pepino. Puedes incorporarle un chorrito de aceite para hacerlo más sabroso</string>
    <string name="a609">Unas tortitas a base de huevo, harina de avena y plátano constituyen un desayuno delicioso a la par que saludable. Bate y tritura los ingredientes, calienta una sartén y en apenas unos minutos podrás tenerlas listas.</string>
    <string name="a6090">Tritura un plátano con un poco de yogurt hasta tener una mezcla homogénea, puedes agregar miel o canela al gusto, y acompáñalo con un poco de mango o fresa (o tu fruta preferida)</string>
    <string name="a6091">Muele un poco de aguacate y úntalo en una rebanada de pan multigramo, puedes agregar pepino, tomate, cebolla y un poco de germinado</string>
    <string name="a6092">El porridge es un desayuno típico de la comida inglesa muy saciante. Para prepararlo solo necesitas cocer un poco de avena con agua o leche durante 10 minutos, volcar la masa en plato y acompañarla de fruta. ¡El plátano, los arándanos y las fresas combinan muy bien!</string>
    <string name="a6093">Una de las preparaciones más famosas de la dieta mediterránea. Corta una rebanada de pan -mejor si es integral-, echa un poquito de aceite de oliva virgen y un poco de tomate natural triturado o picado. Si quieres también puedes incluir un poco de jamón serrano. ¡Delicioso!</string>
    <string name="a6094">Unas tostadas nutritivas, bajas en grasas y ricas en proteínas. Para elaborarlas corta dos rebanadas de pan integral o de centeno, y otras dos rebanadas de aguacate. Prepara un huevo escalfado o cocido y colócalo por encima. ¡Riquísimo!</string>
    <string name="a621">Opción 1:</string>
    <string name="a623">Opción 2:</string>
    <string name="a625">Opción 3:</string>
    <string name="a627">Opción 4:</string>
    <string name="a629">Opción 5:</string>
    <string name="a6292">Opción 6:</string>
    <string name="a6294">Opción 7:</string>
    <string name="a6296">Opción 8:</string>
    <string name="a6298">Opción 9:</string>
    <string name="a629991">Opción 10:</string>
    <string name="op1">Opción 11:</string>
    <string name="op2">Opción 12:</string>
    <string name="op3">Opción 13:</string>
    <string name="op4">Opción 14:</string>
    <string name="op5">Opción 15:</string>
    <string name="op6">Opción 16:</string>
    <string name="op7">Opción 17:</string>
    <string name="op8">Opción 18:</string>
    <string name="op9">Opción 19:</string>
</resources>