<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apps.bienestar.pausasactivasybienestar.Main23Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView210"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:fontFamily="@font/andada"
                android:text="@string/app_pasojos"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif"
                tools:text="@string/app_pasojos" />

            <TextView
                android:id="@+id/textView211"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_141"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_141" />

            <TextView
                android:id="@+id/textView212"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_142"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_142" />

            <TextView
                android:id="@+id/textView213"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_143"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_143" />

            <TextView
                android:id="@+id/textView214"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_144"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_144" />

            <TextView
                android:id="@+id/textView215"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_145"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_145" />

            <TextView
                android:id="@+id/textView216"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_146"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_146" />

            <TextView
                android:id="@+id/textView217"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_147"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_147" />

            <TextView
                android:id="@+id/textView218"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_148"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_148" />

            <TextView
                android:id="@+id/textView219"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_149"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_149" />

            <TextView
                android:id="@+id/textView220"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_1490"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_1490" />

            <TextView
                android:id="@+id/textView221"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andada"
                android:text="@string/app_1491"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="normal"
                tools:text="@string/app_1491" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>